--- a/src/components/projectsdetails.astro
+++ b/src/components/projectsdetails.astro
@@ -2,7 +2,7 @@
 import projectsData from "@/data/projects.json";
 ---
 
-<div class="flex flex-col mt-10">
+<div class="big-container">
   <!-- div cada proyecto-->
 
   {
@@ -10,11 +10,11 @@ import projectsData from "@/data/projects.json";
       return (
         <>
           <a href={project.urlProject}>
-            <div class="flex flex-col md:flex-row rounded-md border-2 border-slate-600 hover:border-white my-4">
+            <div class="flex flex-col md:flex-row rounded-md border-2 border-slate-600 hover:border-white">
               <img class="img-project" src={project.img} alt="" />
               <div class="p-3 flex flex-col gap-2 items-center">
-                <h2 class="title-project">{project.title}</h2>
-                <p class="text-project">{project.text}</p>
+                <h3>{project.title}</h3>
+                <p>{project.text}</p>
 
                 <div class="flex justify-center flex-wrap gap-3">
                   {project.techStack.map((tool) => {
@@ -34,12 +34,6 @@ import projectsData from "@/data/projects.json";
   }
 </div>
 <style>
-  .title-project {
-    @apply text-xl font-semibold text-white;
-  }
-  .text-project {
-    @apply text-justify  text-slate-400 mb-2;
-  }
   .img-project {
     @apply object-fill rounded-t sm:rounded-l sm:max-w-xs;
   }
