--- a/src/layout/general.astro
+++ b/src/layout/general.astro
@@ -25,17 +25,18 @@ import NavBar from "@/components/navBar.astro";
     </main>
     <style is:global>
       p {
-        @apply text-xl text-justify  text-slate-300;
+        @apply text-xl text-justify mb-3 text-slate-300;
       }
       p a {
         @apply text-blue-500;
       }
 
       h3 {
-        @apply text-2xl font-semibold text-white;
+        @apply text-2xl font-semibold text-white mb-8;
       }
 
       h2 {
+        @apply text-3xl font-semibold text-white;
       }
 
       .hover-gradient {
