--- a/src/components/projectsdetails.astro
+++ b/src/components/projectsdetails.astro
@@ -14,7 +14,7 @@ import projectsData from "@/data/projects.json";
               <img class="img-project" src={project.img} alt="" />
               <div class="p-3 flex flex-col gap-2 items-center">
                 <h3 class="mb-0">{project.title}</h3>
-                <p>{project.text}</p>
+                <p class="mb-2">{project.text}</p>
 
                 <div class="flex justify-center flex-wrap gap-3">
                   {project.techStack.map((tool) => {
